// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="layout-row flex-100
         layout-wrap layout-align-start-center paginate_box"
>
  <div
    className="flex-100 layout-row layout-align-end-center searchable_header"
  >
    <div
      className="input_box_full flex-40 layout-row layout-align-end-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search Shipments"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start height_100"
  >
    <div
      className="pointy flex-30 flex-md-45 margin_bottom layout-row layout-align-start-stretch tile_padding loc_info"
      key="addLocationButton"
      onClick={[Function]}
    >
      <div
        className="address-box new-address layout-row layout-align-center-center layout-wrap"
      >
        <div
          className="layout-row layout-align-center flex-100"
        >
          <div
            className="plus-icon"
          />
        </div>
        <div
          className="layout-row layout-align-center flex-100"
        >
          <h3>
            Add location
          </h3>
        </div>
      </div>
    </div>
    <div
      className="flex-30 flex-md-45 margin_bottom tile_padding layout-row layout-align-start-stretch loc_info"
      key="UUID_MOCK_KEY_0"
    >
      <div
        className="address-box flex-100 layout-column"
      >
        <div
          className="header layout-row layout-align-end-center"
        >
          <i
            className="fa fa-star clip icon_primary"
            style={Object {}}
          />
          <span
            className="emulate_link"
            onClick={[Function]}
          >
            <i
              className="fa fa-pencil"
            />
          </span>
          <span
            className="emulate_link"
            onClick={[Function]}
          >
            <i
              className="fa fa-trash icon_trash"
            />
          </span>
        </div>
        <div
          className="layout-row flex-100 address_address"
        >
          <i
            className="flex-10 fa fa-map-marker clip"
            style={Object {}}
          />
          <div
            className="content flex layout-wrap layout-align-space-between"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-30 flex-md-45 margin_bottom tile_padding layout-row layout-align-start-stretch loc_info"
      key="UUID_MOCK_KEY_1"
    >
      <div
        className="address-box flex-100 layout-column"
      >
        <div
          className="header layout-row layout-align-end-center"
        >
          <div
            className="layout-row icon_primary"
          >
            <div
              className="layout-row"
            >
              <div
                className="makePrimary pointy"
                onClick={[Function]}
              >
                <i
                  className="fa fa-star-o clip"
                  style={Object {}}
                />
              </div>
            </div>
          </div>
          <span
            className="emulate_link"
            onClick={[Function]}
          >
            <i
              className="fa fa-pencil"
            />
          </span>
          <span
            className="emulate_link"
            onClick={[Function]}
          >
            <i
              className="fa fa-trash icon_trash"
            />
          </span>
        </div>
        <div
          className="layout-row flex-100 address_address"
        >
          <i
            className="flex-10 fa fa-map-marker clip"
            style={Object {}}
          />
          <div
            className="content flex layout-wrap layout-align-space-between"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-95 layout-row layout-align-center-center margin_bottom"
  >
    <div
      className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button disabled
                    "
      onClick={null}
    >
      <i
        className="fa fa-chevron-left"
      />
      <p>
            
        Back
      </p>
    </div>
    <p>
      1
       / 
      1
       
    </p>
    <div
      className="
              flex-15 layout-row layout-align-center-center pointy
              navigation_button disabled
            "
      onClick={null}
    >
      <p>
        Next
            
      </p>
      <i
        className="fa fa-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`state.page > 10 1`] = `
<div
  className="layout-row flex-100
         layout-wrap layout-align-start-center paginate_box"
>
  <div
    className="flex-100 layout-row layout-align-end-center searchable_header"
  >
    <div
      className="input_box_full flex-40 layout-row layout-align-end-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search Shipments"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start height_100"
  >
    <div
      className="pointy flex-30 flex-md-45 margin_bottom layout-row layout-align-start-stretch tile_padding loc_info"
      key="addLocationButton"
      onClick={[Function]}
    >
      <div
        className="address-box new-address layout-row layout-align-center-center layout-wrap"
      >
        <div
          className="layout-row layout-align-center flex-100"
        >
          <div
            className="plus-icon"
          />
        </div>
        <div
          className="layout-row layout-align-center flex-100"
        >
          <h3>
            Add location
          </h3>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-95 layout-row layout-align-center-center margin_bottom"
  >
    <div
      className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button 
                    "
      onClick={[Function]}
    >
      <i
        className="fa fa-chevron-left"
      />
      <p>
            
        Back
      </p>
    </div>
    <p>
      11
       / 
      1
       
    </p>
    <div
      className="
              flex-15 layout-row layout-align-center-center pointy
              navigation_button disabled
            "
      onClick={null}
    >
      <p>
        Next
            
      </p>
      <i
        className="fa fa-chevron-right"
      />
    </div>
  </div>
</div>
`;
